Spring/Bank/src/main/java/com/example/demo/errors/LoanIsntActiveException.java
package com.example.demo.errors;

public class LoanIsntActiveException extends Exception  {

	/**
	 * 
	 */
	private static final long serialVersionUID = 1L;

}
